--- a/RMSVST3/RMSMyVST3.lpi
+++ b/RMSVST3/RMSMyVST3.lpi
@@ -60,7 +60,7 @@
           <Version Value="11"/>
           <PathDelim Value="\"/>
           <Target>
-            <Filename Value="RMSMyVST3"/>
+            <Filename Value="RMSMyVST3.vst3" ApplyConventions="False"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
