--- a/RMSVST3/RMSMyVST3.lpi
+++ b/RMSVST3/RMSMyVST3.lpi
@@ -96,6 +96,9 @@
     </RunParams>
     <RequiredPackages>
       <Item>
+        <PackageName Value="RMSVST3"/>
+      </Item>
+      <Item>
         <PackageName Value="LCL"/>
       </Item>
     </RequiredPackages>
@@ -112,43 +115,11 @@
         <ResourceBaseClass Value="Form"/>
       </Unit>
       <Unit>
-        <Filename Value="Vst3Base.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="UVST3Processor.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
         <Filename Value="..\SimpleSynthCommon\UMyVst.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
       <Unit>
-        <Filename Value="UCPlugView.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="UCUnitInfo.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="UCAudioProcessor.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="UCComponent.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="UCEditController.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="UCPluginFactory.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit>
-      <Unit>
-        <Filename Value="..\FrameworkCommon\ULogger.pas"/>
+        <Filename Value="..\SimpleSynthCommon\UMyVstDSP.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit>
     </Units>
